deletes blue title bar, adds title as TextView, changes tags to TextView, cleans up id's and names in general to have the code be more easily mergeable

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,8 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
-    <string name="titleText">Test Title Text</string>
+    <string name="titleText">to be removed</string>
+    <string name="noteDisplayTitleHint">enter title ...</string>
+    <string name="noteDisplayTextHint">enter text ...</string>
+    <string name="noteDisplayTagHint">enter tags ...</string>
 </resources>
