fixes navigation menu, creates settings

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,11 @@
     <string name="noteDisplayTitleHint">enter title ...</string>
     <string name="noteDisplayTextHint">enter text ...</string>
     <string name="noteDisplayTagHint">enter tags ...</string>
+
+    <string-array name="styles_list">
+        <item>Light</item>
+        <item>Dark</item>
+    </string-array>
+
+
 </resources>
