Migrate UI to new file organisation

--- a/IcyNote/app/src/main/res/values/strings.xml
+++ b/IcyNote/app/src/main/res/values/strings.xml
@@ -1,3 +1,19 @@
 <resources>
-    <string name="app_name">Project</string>
+    <string name="app_name">navigationtest</string>
+
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+
+    <string name="action_settings">Settings</string>
+    <string name="titleText">to be removed</string>
+    <string name="noteDisplayTitleHint">enter title ...</string>
+    <string name="noteDisplayTextHint">enter text ...</string>
+    <string name="noteDisplayTagHint">enter tags ...</string>
+
+    <string-array name="styles_list">
+        <item>Light</item>
+        <item>Dark</item>
+    </string-array>
+
+
 </resources>
