--- a/IcyNote/app/src/main/res/values/strings.xml
+++ b/IcyNote/app/src/main/res/values/strings.xml
@@ -9,10 +9,19 @@
     <string name="noteDisplayTextHint">enter text ...</string>
     <string name="noteDisplayTagHint">enter tags ...</string>
 
+    <string name="listAllNotes">List all Notes</string>
+    <string name="editTags">Edit tags</string>
+    <string name="trash">Trash</string>
+    <string name="settings">Settings</string>
+    <string name="logout">Log out</string>
+
     <string-array name="styles_list">
         <item>Light</item>
         <item>Dark</item>
     </string-array>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 
 </resources>
