--- a/IcyNote/app/src/main/res/values/strings.xml
+++ b/IcyNote/app/src/main/res/values/strings.xml
@@ -11,10 +11,14 @@
     <string name="settings">Settings</string>
     <string name="logout">Log out</string>
 
+    <string name="Styles">Styles</string>
+
+    <string name="menuButtonImage">Menu button image</string>
+    <string name="menuOpenMetadata">Metadatas button image</string>
+
     <string-array name="styles_list">
         <item>Light</item>
         <item>Dark</item>
     </string-array>
-
 
 </resources>
