--- a/IcyNote/app/src/main/res/values/strings.xml
+++ b/IcyNote/app/src/main/res/values/strings.xml
@@ -2,8 +2,8 @@
     <string name="app_name">Icy Note</string>
 
     <string name="action_settings">Settings</string>
-    <string name="noteDisplayTitleHint">enter title ...</string>
-    <string name="noteDisplayTextHint">enter text ...</string>
+    <string name="noteDisplayTitleHint">enter title…</string>
+    <string name="noteDisplayTextHint">enter text…</string>
 
     <string name="listAllNotes">List all Notes</string>
     <string name="editTags">Edit tags</string>
