Setup policy for when user presses back
Fixes #106

--- a/IcyNote/app/src/main/res/values/strings.xml
+++ b/IcyNote/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="noteDisplayTextHint">enter text…</string>
 
     <string name="listAllNotes">List all Notes</string>
+    <string name="openLastNote">Reopen last note</string>
     <string name="editTags">Edit tags</string>
     <string name="trash">Trash</string>
     <string name="settings">Settings</string>
