--- a/IcyNote/app/src/main/res/values/strings.xml
+++ b/IcyNote/app/src/main/res/values/strings.xml
@@ -112,8 +112,11 @@
 
     <string name="metadata_note_date_created">"Date Created:  "</string>
     <string name="metadata_note_date_modified">"Date Modified:  "</string>
-    <string name="metadata_note_date_format">dd/MM/yyyy  \'at\'  HH:mm:ss</string>
+    <string name="metadata_note_date_format">dd/MM/yyyy</string>
     <string name="metadata_note_back_text">Back</string>
+    <string name="metadata_note_plugins_title">Plugins</string>
+    <string name="metadata_note_edit_title_title">Edit the Title</string>
+    <string name="metadata_note_info_title">More Information</string>
 
     <string name="error_edit_note_edit_note_contract_not_implemented">%s has to implement EditNote.Contract.</string>
 
